// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TrendsService getBeverageTrends should get beverage trends for a month 1`] = `
{
  "beveragesPerDay": [
    {
      "alcohol": 1,
      "tea_coffee": 0,
      "water": 2,
    },
    {
      "alcohol": 0,
      "tea_coffee": 0,
      "water": 4,
    },
    {
      "alcohol": 0,
      "tea_coffee": 0,
      "water": 0,
    },
    {
      "alcohol": 0,
      "tea_coffee": 0,
      "water": 2,
    },
    {
      "alcohol": 0,
      "tea_coffee": 3,
      "water": 0,
    },
  ],
  "highestValue": 4,
  "legend": [
    "1",
    "2",
    "3",
    "4",
    "5",
  ],
}
`;

exports[`TrendsService getBeverageTrends should get beverage trends for a week 1`] = `
{
  "beveragesPerDay": [
    {
      "alcohol": 0,
      "tea_coffee": 0,
      "water": 0,
    },
    {
      "alcohol": 0,
      "tea_coffee": 2,
      "water": 4,
    },
    {
      "alcohol": 1,
      "tea_coffee": 0,
      "water": 2,
    },
  ],
  "highestValue": 4,
  "legend": [
    "M",
    "T",
    "W",
    "T",
    "F",
    "S",
    "S",
  ],
}
`;

exports[`TrendsService getExcerciseTrends should get excercise trends for a month 1`] = `
{
  "excercisePerDay": [
    75,
    0,
    0,
    30,
    0,
  ],
  "highestValue": 75,
  "legend": [
    "1",
    "2",
    "3",
    "4",
    "5",
  ],
}
`;

exports[`TrendsService getExcerciseTrends should get excercise trends for a week 1`] = `
{
  "excercisePerDay": [
    0,
    0,
    75,
  ],
  "highestValue": 75,
  "legend": [
    "M",
    "T",
    "W",
    "T",
    "F",
    "S",
    "S",
  ],
}
`;

exports[`TrendsService getMealTrends should get meal trends for a month 1`] = `
{
  "legend": [
    "1",
    "2",
    "3",
    "4",
    "5",
  ],
  "mealTotals": {
    "breakfast": 4,
    "dinner": 3,
    "lunch": 4,
    "snack_1": 2,
    "snack_2": 1,
  },
  "mealsPerDay": [
    {
      "id": "day_1",
      "meals": [
        1,
        1,
        1,
        1,
        1,
      ],
    },
    {
      "id": "day_2",
      "meals": [
        1,
        0,
        1,
        0,
        0,
      ],
    },
    {
      "id": "day_3",
      "meals": [
        0,
        0,
        0,
        0,
        0,
      ],
    },
    {
      "id": "day_4",
      "meals": [
        1,
        1,
        1,
        0,
        1,
      ],
    },
    {
      "id": "day_5",
      "meals": [
        1,
        0,
        1,
        0,
        1,
      ],
    },
  ],
  "totalValues": 5,
}
`;

exports[`TrendsService getMealTrends should get meal trends for a week 1`] = `
{
  "legend": [
    "M",
    "T",
    "W",
    "T",
    "F",
    "S",
    "S",
  ],
  "mealTotals": {
    "breakfast": 2,
    "dinner": 1,
    "lunch": 1,
    "snack_1": 1,
    "snack_2": 0,
  },
  "mealsPerDay": [
    {
      "id": "day_M",
      "meals": [
        0,
        0,
        0,
        0,
        0,
      ],
    },
    {
      "id": "day_T",
      "meals": [
        1,
        0,
        1,
        0,
        0,
      ],
    },
    {
      "id": "day_W",
      "meals": [
        1,
        1,
        0,
        0,
        1,
      ],
    },
  ],
  "totalValues": 7,
}
`;
